--- a/Udacity 1st Project/project.css
+++ b/Udacity 1st Project/project.css
@@ -32,7 +32,7 @@
 }
 
 .option1 {
-  background-image: url(/home/felix/Desktop/stage1/pexels-photo-287336.png);
+  background-image: url(https://github.com/felixtomlinson/Udacity/blob/master/Udacity%201st%20Project/pexels-photo-287336.png?raw=true);
   margin-top: 50px;
   padding: 10%;
   position: absolute;
@@ -51,7 +51,7 @@
 }
 
 .option2 {
-  background-image: url(/home/felix/Desktop/stage1/pexels-photo-192940.jpeg);
+  background-image: url(https://github.com/felixtomlinson/Udacity/blob/master/Udacity%201st%20Project/pexels-photo-192940.jpeg?raw=true);
   margin-top: 50px;
   padding: 10%;
   position: absolute;
