--- a/Udacity 1st Project/project.css
+++ b/Udacity 1st Project/project.css
@@ -32,7 +32,7 @@
 }
 
 .option1 {
-  background-image: url(Udacity/Udacity 1st Project/pexels-photo-192940.jpeg);
+  background-image: url(pexels-photo-192940.jpeg);
   margin-top: 50px;
   padding: 10%;
   position: absolute;
@@ -51,7 +51,7 @@
 }
 
 .option2 {
-  background-image: url(Udacity/Udacity 1st Project/pexels-photo-192940.jpeg);
+  background-image: url(pexels-photo-192940.jpeg);
   margin-top: 50px;
   padding: 10%;
   position: absolute;
@@ -86,9 +86,8 @@ h2 {
   margin: 0%;
   width: 100%;
   height: 100px;
-  position: -webkit-sticky;
-  position: sticky;
-  bottom: 0;
+  position: absolute;
+  bottom: 0px;
 }
 
 .footer-text{
@@ -100,3 +99,7 @@ h2 {
   margin-bottom: 10px;
 }
 
+.wrapper {
+  min-height: 100%;
+  position: relative;
+}
